--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <div class="product">
         <img src="https://i.imgur.com/83DsMIJ.png" alt="Pequena Rei Lemone">
-        <h2>Pequena Rei Lemone</h2>
+        <h2>Rei Lemone</h2>
         <p>R$ 35,00</p>
         <button onclick="addToCart('Pequena Rei Lemone', 35)">Comprar</button>
       </div>
@@ -40,7 +40,7 @@
       <div class="product">
         <img src="https://i.imgur.com/9iV0CzV.png" alt="Shoronbno">
         <h2>Shoronbno</h2>
-        <p>R$ 50,00</p>
+        <p>R$ 35,00</p>
         <button onclick="addToCart('Shoronbno', 50)">Comprar</button>
       </div>
 
