--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>🧠 Loja Brainrots Garden 🌱</h1>
+    <h1>🧠 Loja ice plants 🌱</h1>
     <div id="cart-btn">
       🛒 Carrinho (<span id="cart-count">0</span>)
     </div>
